style: add correct amount of spacing between AudiophileShowcase and FeaturedProducts

--- a/src/components/InteractionHub/FeaturedProducts/FeaturedProducts.module.scss
+++ b/src/components/InteractionHub/FeaturedProducts/FeaturedProducts.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   list-style: none;
+  margin-bottom: 2rem;
   flex-direction: column;
 }
 
